--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "pg": "^8.16.3",
     "sqlite3": "^5.1.7",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
