--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
