--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "attendance-system",
+  "version": "1.0.0",
+  "scripts": {
+    "install-all": "cd backend && npm install && cd ../frontend && npm install",
+    "build": "cd frontend && npm install && npm run build",
+    "postinstall": "npm run build"
+  },
   "dependencies": {
     "xlsx": "^0.18.5"
   }
