fix(deploy): Fix Railway build error - remove postinstall hook
Problem:
- postinstall hook was causing recursive npm run build
- cd ../frontend was failing in Railway build context

Solution:
- Removed postinstall hook from package.json
- Updated railway.toml buildCommand to explicitly:
  1. cd frontend && npm install && npm run build
  2. cd ../backend && npm install
- Renamed build script to build:frontend for clarity

This fixes the 'can't cd to ../frontend' error.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "install-all": "cd backend && npm install && cd ../frontend && npm install",
-    "build": "cd frontend && npm install && npm run build",
-    "postinstall": "npm run build"
+    "build:frontend": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
     "xlsx": "^0.18.5"
