--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "cd ../frontend && npm install && npm run build"
+    "build": "echo 'Building frontend...' && cd ../frontend && npm install && npm run build && echo 'Frontend build complete!'",
+    "railway-build": "npm run build"
   },
   "keywords": [
     "attendance",
