--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "build": "echo 'Building frontend...' && cd ../frontend && npm install && npm run build && echo 'Frontend build complete!'",
-    "railway-build": "npm run build"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "attendance",
