--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,14 +3,15 @@ nixPkgs = ["nodejs-22_x"]
 
 [phases.install]
 cmds = [
-    "cd frontend && npm ci",
-    "cd backend && npm ci"
+    "npm ci --prefix frontend",
+    "npm ci --prefix backend"
 ]
 
 [phases.build]
 cmds = [
-    "cd frontend && npm run build"
+    "npm run build --prefix frontend",
+    "cp -r frontend/dist backend/"
 ]
 
 [start]
-cmd = "cd backend && npm start"
+cmd = "npm start --prefix backend"
