--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "attendance-system",
+  "name": "attendance-system-monorepo",
   "version": "1.0.0",
+  "private": true,
+  "description": "Attendance Management System - Monorepo",
+  "type": "module",
   "scripts": {
-    "install-all": "cd backend && npm install && cd ../frontend && npm install",
-    "build:frontend": "cd frontend && npm install && npm run build"
+    "start": "npm start --prefix backend",
+    "build": "npm run build --prefix frontend && cp -r frontend/dist backend/",
+    "install-all": "npm ci --prefix frontend && npm ci --prefix backend"
   },
-  "dependencies": {
-    "xlsx": "^0.18.5"
-  }
+  "workspaces": [
+    "frontend",
+    "backend"
+  ]
 }
