fix: Add Procfile to force Node server execution on Railway
Critical fix:
- Railway was running Caddy (static server) instead of Node
- Add Procfile with: web: cd backend && node server.js
- This forces Railway to recognize as Node.js app

Updated nixpacks.toml for clarity

This should start Express server and make /api/* work

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [providers]
-node = {}
+node = { }
 
 [phases.setup]
-nixPkgs = ["nodejs-22_x"]
+nixPkgs = ["nodejs-22_x", "npm-10_x"]
 
 [phases.install]
 cmds = [
