--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.2",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "prop-types": "^15.8.1",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
