Fix: Update package-lock.json files for nodemailer
- Update backend/package-lock.json with nodemailer@8.0.1
- Update frontend/package-lock.json to sync with package.json
- Change postinstall script from 'npm ci' to 'npm install' for better compatibility
- Resolves Railway build failure (EUSAGE: Missing nodemailer from lock file)

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "npm start --prefix backend",
     "build": "npm run build --prefix frontend && cp -r frontend/dist backend/",
-    "install-all": "npm ci --prefix frontend && npm ci --prefix backend",
-    "postinstall": "npm ci --prefix frontend && npm ci --prefix backend && npm run build"
+    "install-all": "npm install --prefix frontend && npm install --prefix backend",
+    "postinstall": "npm install --prefix frontend && npm install --prefix backend && npm run build"
   },
   "workspaces": [
     "frontend",
